# lecture_04

ansible_example/: node_inventory.ini  prometheus_grafana_playbook.yml  prometheus_playbook.yml
ansible_example/config_files/: grafana.service.j2  prometheus.service.j2  prometheus.yml.j2
terraform_example/: azure_vm.tf
translator_example/: translate_example.py
webapp_example/: app.py  pyproject.toml
webapp_example/templates/: index.html
