[tool.poetry]
name = "webapp-example"
version = "0.1.0"
description = ""
authors = ["Nils Riekers"]
readme = "README.md"
packages = [{include = "webapp_example"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.3"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
